# raccoon_node

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  _typos.toml  build.rs  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: main.rs
crates/raccoon-api/: Cargo.toml  build.rs
crates/raccoon-api/src/: assets.rs  git.rs  handlers.rs  lib.rs  publication.rs  terminal.rs
crates/raccoon-chat/: Cargo.toml
crates/raccoon-chat/src/: lib.rs
crates/raccoon-core/: Cargo.toml
crates/raccoon-core/src/: config.rs  error.rs  file_refs.rs  lib.rs  models.rs  pi_event.rs  utils.rs
crates/raccoon-dev/: Cargo.toml
crates/raccoon-dev/src/: lib.rs
crates/raccoon-pi-rpc/: Cargo.toml
crates/raccoon-pi-rpc/assets/: raccoon-clarification.mjs
crates/raccoon-pi-rpc/src/: lib.rs  tests.rs
crates/raccoon-requirement/: Cargo.toml
crates/raccoon-requirement/src/: analysis.rs  execution.rs
crates/raccoon-store/: Cargo.toml
crates/raccoon-store/src/: db.rs  lib.rs
crates/raccoon-store/src/store/: helpers.rs  mod.rs  tests.rs
crates/raccoon-tui/: Cargo.toml
crates/raccoon-tui/src/: lib.rs  settings.rs
docs/: ARCHITECTURE_CORE.md
docs/analysis/: raccoon_agents_test_analysis.md  raccoon_agents_test_analysis_revised.md
docs/analysis/reinvestigation/: db-trace.md  log-failures.md  oom-hypothesis.md  session-concurrency.md  source-review-orchestrator.md
docs/api/: README.md
docs/audit/: OPTIMIZATION_REPORT.md  code_quality_audit.md  dependency_audit.md  docs_maintainability_audit.md  performance_audit.md  platform_compat_audit.md  security_audit.md  structure_build_audit.md  test_coverage_audit.md  token_consumption_research.md
docs/plans/: frontend-feature-migration-points.md  prompt-context-borrowed-features-summary.md  prompt-engineering-node-refactor.md  token-context-optimization.md
docs/rewrite/: 01-product-requirements.md  02-frontend-requirements.md  03-backend-requirements.md  04-architecture-decisions.md
docs/spec/: ASTORYX_MIGRATION_PLAN.md  TECH_STACK.md  astryx-poc-report.md
frontend/: index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: frontend-acceptance.spec.ts
frontend/src/: App.test.ts  App.test.tsx  App.tsx  constants.ts  main.tsx  styles.css
frontend/src/api/: bootstrap.ts  client.ts  files.test.ts  files.ts  git.test.ts  git.ts  groups.test.ts  groups.ts  index.ts  intent.ts  modelCaps.test.ts  modelCaps.ts  quality.test.ts  quality.ts  settings.test.ts  settings.ts  specHash.test.ts  specHash.ts  types.ts  usage.test.ts  usage.ts  workplan.test.ts  workplan.ts
frontend/src/canvas/: ChatCanvasNode.tsx  MainCanvas.tsx  buildProjectNodes.test.ts  buildProjectNodes.ts  buildStartNodes.test.ts  buildStartNodes.ts  canvas.css  edges.test.ts  edges.ts  geometry.test.ts  geometry.ts  layout.test.ts  layout.ts  mainCanvasViewport.hook.test.tsx  mainCanvasViewport.test.ts  mainCanvasViewport.ts  nodeScroll.ts  nodes.tsx  orbitNodes.test.tsx  orbitNodes.tsx  pixelIcons.tsx  settingsViewport.test.ts  settingsViewport.ts
frontend/src/chat/: ConversationGraph.test.ts  ConversationGraph.tsx  dag.test.ts  dag.ts  inputFocus.test.tsx  nodes.test.tsx  nodes.tsx
frontend/src/components/: DNode.tsx  DiffView.tsx  ErrorBoundary.tsx
frontend/src/contexts/: RequirementTaskEventsContext.tsx
frontend/src/events/: applier.ts  connect.test.ts  connect.ts  ndjson.test.ts  ndjson.ts
frontend/src/hooks/: useConversationSocket.ts  useCurrentProject.test.ts  useCurrentProject.ts  useElementSize.ts  useEventSource.ts  useMediaQuery.ts  useModelSettings.test.ts  useModelSettings.ts  usePanelEscape.test.tsx  usePanelEscape.ts  useProjectCanvas.test.ts  useProjectCanvas.ts  useProjectChat.test.ts  useProjectChat.ts  useProjectGit.test.ts  useProjectGit.ts  useProjectTerminals.test.ts  useProjectTerminals.ts  useRequirementFlow.test.ts  useRequirementFlow.ts  useStartData.test.ts  useStartData.ts
frontend/src/nodes/: renderNodeContent.tsx
frontend/src/notifications/: queue.test.ts  queue.ts
frontend/src/store/: appStore.test.tsx  appStore.tsx  appearanceStore.ts  canvasStore.test.ts  canvasStore.ts  composerStore.test.ts  composerStore.ts  deliveryStore.ts  domainStore.test.ts  domainStore.ts  filesStore.ts  gitStore.ts  modelsStore.ts  settingsWorkbenchStore.ts  terminalStore.ts
frontend/src/styles/: index.css
frontend/src/test/: a11y.test.tsx  pxlkit.smoke.test.tsx  setup.ts
frontend/src/theme/: astryxThemes.ts  global.css  pxlkit.css  tokens.css
prompts/: requirement_coordinator.txt
prompts/contracts/: execution_plan.schema.json  recovery_guidance.schema.json  task_result.schema.json  task_result_branch_merge.schema.json  task_result_implementation.schema.json  task_result_merge_review.schema.json  task_result_review.schema.json  task_result_review_summary.schema.json
prompts/global/: raccoon.md
prompts/skills/: code_reviewer.md  execution_planner.md  implementation_runner.md  requirement_coordinator.md
scripts/: build.mjs  check-versions.mjs  check.mjs  dev.mjs  publish-npm.mjs  smoke-binary.mjs
src/: assets.rs  cli.rs  config.rs  db.rs  dev_vite.rs  error.rs  file_refs.rs  lib.rs  logging.rs  main.rs  models.rs  pi_rpc.rs  project_chat.rs  requirement_analysis.rs  requirement_execution.rs  setup.rs  store.rs  tui.rs  utils.rs
src/api/: assets.rs  git.rs  handlers.rs  mod.rs  publication.rs  terminal.rs  workflow_runtime.rs
src/chat/: mod.rs
src/dev/: mod.rs
src/models/: mod.rs
src/pi/: mod.rs  tests.rs  transport.rs
src/pi_rpc/: client.rs  helpers.rs  mod.rs  tests.rs
src/prompt/: budget.rs  contracts.rs  diagnostics.rs  mod.rs  renderer.rs  sections.rs  sources.rs
src/requirement/: analysis.rs  evidence.rs  execution.rs  mod.rs
src/store/: db.rs  helpers.rs  mod.rs  schema.sql  tests.rs
src/tui/: mod.rs
src/workflow/: context.rs  engine.rs  git.rs  mod.rs  model.rs  plan.rs  publication.rs  store.rs  validation.rs
(+172 files in other folders)
