[package]
name = "raccoon-node"
version = "0.2.2"
edition = "2024"
rust-version = "1.96"
description = "Local Git project canvas powered by Pi Agent RPC"
license = "MIT"
repository = "https://github.com/TheShowMy/raccoon_node"
readme = "README.md"
keywords = ["agent", "git", "llm", "workflow"]
include = [
    "/src/**",
    "/frontend/dist/**",
    "/prompts/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "raccoon"
path = "src/main.rs"

[features]
test-utils = []

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
mime_guess = "2"
pi-rpc-rs = "0.1.3"
portable-pty = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
