[package]
name = "raccoon-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
raccoon-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing.workspace = true

[lib]
name = "raccoon_chat"
path = "src/lib.rs"
