[package]
name = "raccoon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process", "sync"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "raccoon_core"
path = "src/lib.rs"
