[package]
name = "raccoon-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
raccoon-core.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "sync"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "raccoon_dev"
path = "src/lib.rs"
