[package]
name = "raccoon-pi-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
raccoon-chat.workspace = true
raccoon-core.workspace = true
raccoon-requirement.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "raccoon_pi_rpc"
path = "src/lib.rs"
