[package]
name = "raccoon-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
raccoon-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "raccoon_store"
path = "src/lib.rs"
